# smtpd_rs

./: Cargo.toml  README.md
examples/basic/: main.rs
src/: constants.rs  core.rs  lib.rs
src/core/: auth.rs  error.rs  handler.rs  response.rs  response_error.rs  session.rs  stream.rs  tls.rs
src/utils/: parser.rs
