[package]
name = "smtpd"
version = "0.1.0"
edition = "2024"
authors = ["Utpal Sarkar <utpalsarkar010@gmail.com>"]
repository = "https://github.com/uksarkar/smtpd_rs"
homepage = "https://github.com/uksarkar/smtpd_rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Asynchronous, extensible SMTP server library built on Tokio"
keywords = ["smtp", "smtpd", "server", "mail", "email"]
categories = ["network-programming", "asynchronous", "protocols"]
exclude = [
    ".vscode/",
    "*.orig",
    ".gitignore",
    ".cargo_vcs_info.json",
    "Cargo.lock",
]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
hostname = "0.4.1"
lazy_static = "1.5.0"
native-tls = { version = "0.2.14", optional = true }
regex = "1.11.3"
rustls = { version = "0.23.32", optional = true }
tokio = { version = "1.47.1", features = ["full"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"] }

[features]
default = []
native-tls-backend = ["dep:native-tls", "dep:tokio-native-tls"]
rustls-backend = ["dep:rustls", "dep:tokio-rustls"]
